--- a/triggerbinding.yaml
+++ b/triggerbinding.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   params:
   - name: gitrevision
-    value: $(body.head_commit.id)
+    #value: $(body.head_commit.id)
+    value: $(body.repository.master_branch)
   - name: gitrepositoryurl
-    value: $(body.repository.url)
+    value: $(body.repository.ssh_url)
   - name: contenttype
     value: $(header.Content-Type)
